infrastructure/03-traefik/base/traefik-middleware-authentik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-middleware
  namespace: traefik
spec:
  forwardAuth:
    address: https://auth.steffenillium.de/outpost.goauthentik.io/auth/traefik
        trustForwardHeader: true
        authResponseHeaders:
            - X-authentik-username
            - X-authentik-groups
            - X-authentik-email
            - X-authentik-name
            - X-authentik-uid
            - X-authentik-jwt
            - X-authentik-meta-jwks
            - X-authentik-meta-outpost
            - X-authentik-meta-provider
            - X-authentik-meta-app
            - X-authentik-meta-version
