infrastructure/03-traefik/base/traefik-adguard-service-udp-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-udp-dns
  namespace: traefik
spec:
  selector:
    app: adguard
  ports:
    - port: 53
      targetPort: 53
  type: LoadBalancer
