infrastructure/03-traefik/base/argo-cd-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ui
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`argocd.steffenillium.de`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
  tls:
    certResolver: default
