infrastructure/03-traefik/base/traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`tr.steffenillium.de`) && (PathPrefix(`/dashboard`) || Host(`tr.steffenillium.de`) && PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
